    * main.php, changelog.php: Add headers to ChangeLog display.
    * scripts/create_tables.sql: Add IF EXISTS.
    * libraries/read_dump.lib.php: Ignore comments for SQL splitting,
      otherwise unmatched quotes cause problems (bug #978113).
    * libraries/common.lib.php: Use read_dump.php instead of sql.php for
      links, otherwise we'll fail on commas.
    
2004-06-23 Marc Delisle  <lem9@users.sourceforge.net>
    * many files: remove references to older /images, and
      erase /images contents

2004-06-22 Marc Delisle  <lem9@users.sourceforge.net>
    * config.inc.php, themes/.../colors.inc.php: remove color-related
      parameters from config.inc.php, and non-color-related from colors.inc.php
    * config.inc.php, libraries/common.lib.php, libraries/config_import.lib.php:
      missing parameter for the Refresh link feature

2004-06-22 Michal Čihař  <michal@cihar.com>
    * libraries/relation.lib.php: Fix possible error on non existant pma db.
    
2004-06-20 Marc Delisle  <lem9@users.sourceforge.net>
    * themes.php: use standard headers. A iso-8859-1 charset was hardcoded
      in this script, but it's better to use libraries/header_http.inc.php

2004-06-18 Marc Delisle  <lem9@users.sourceforge.net>
    * themes/original/img/item*.png, themes/original/css/theme_right.css.php,
      libraries/common.lib.php, libraries/display_export.lib.php,
      db_details_structure.php, tbl_select.php:
      fix IE font size problem, redesign search and export pages,
      thanks to Michael Keck (mkkeck)
    * libraries/string.lib.php: bug #975290, wrong internal encoding
      for hebrew, thanks to Moshe Bergman (moshe_be)

2004-06-17 Alexander M. Turek  <me@derrabus.de>
    * libraries/dbi/mysql.dbi.php: Removed debug code.
    * libraries/dbi/mysqli.dbi.php: If connecting fails, we don't know the
      MySQL version.

2004-06-17 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: fix "original" theme colors